# grpc-device

./: CMakeLists.txt
imports/include/: NiFPga.lib  NiFpga (1).h  NiFpga.c  nixnet.h
imports/lib/win64/: NiFpga.lib  niRFSA.lib  nixnet.lib
source/codegen/: client_helpers.py  common_helpers.py  metadata_mutation.py  proto_helpers.py  service_helpers.py
source/codegen/metadata/nidaqmx/: config.py  enums.py  functions.py
source/codegen/metadata/nidmm/: functions.py
source/codegen/metadata/nifpga/: config.py  functions.py
source/codegen/metadata/nirfsa/: config.py  functions.py
source/codegen/metadata/nixnet/: config.py  functions.py
source/codegen/templates/: client.h.mako  library.cpp.mako  proto.mako  service.cpp.mako  service.h.mako  service_helpers.mako
source/custom/: nidaqmx_service.custom.cpp  nidcpower_service.custom.cpp  nirfsa_service.custom.cpp  niscope_service.custom.cpp  nisync_service.custom.cpp  nixnet_service.custom.cpp
source/pytools/: DaqChannelAttributes.py  NiFpga_FpgaTest.h  daqtest.py  fpgatest.py  nidaqmx_pb2.py  nidaqmx_pb2.pyi  nidaqmx_pb2_grpc.py  nifpga_pb2.py  nifpga_pb2.pyi  nifpga_pb2_grpc.py  nixnet_pb2.py  nixnet_pb2.pyi  nixnet_pb2_grpc.py  pyproject.toml  xnettest.py
source/server/: core_server.cpp  session_repository.h
source/tests/unit/: ni_fake_service_tests.cpp
