[tool.poetry]
name = "grpc-device-pytools"
version = "0.1.0"
description = ""
authors = ["Alex Starche <alex.starche@ni.com>"]

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "^1.38.0"
grpcio-tools = "^1.38.0"
mypy-protobuf = "^2.4"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
